# fsautomata

./: .emacs  LICENSE  README.md  meson.build
example/: mealy.c
fsautomata/: mealy.h
gobiautomata/: mealy.c  mealy.h
